k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - llama.bengfort.com
      secretName: llama-bengfort-com
  rules:
    - host: llama.bengfort.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
